css.css
html, body, main {
  margin: 0;
  padding: 0;
}
body {
  font-family: 'Titillium Web', sans-serif;
  font-size: 20px;
}
pre, code {
  font-family: 'Ubuntu Mono', monospace;
}
section {
}
.section {
  display: block;
  margin: 0 auto;
  max-width: 800px;
}
.header-section {
  color: white;
  background: #4988ba;
  text-align: center;
}
.haskell-logo {
  padding-top: 20px;
  padding-bottom: 50px;
  background: url(Haskell.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: 1100px;
}
.about-section {
  padding-top: 40px;
  padding-bottom: 20px;
}
.about-section, .info-section {
  padding-left: 20px;
  padding-right: 20px;
}
h1 {
  font-size: 105px;
  font-weight: normal;
  line-height: 90px;
}
h2 {
  margin-top: -1em;
  font-size: 50px;
  font-weight: normal;
}

ul li {
   list-style-type: disc;
   font-size:15px;
}

ul li > span {
   font-size:20px;
}

a {
  color: #4988ba;
  text-decoration: none;
}
a:focus,
a:hover,
a:active,
a.active {
  color: #91b9d7;
  text-decoration: none;
}

.lame {
  color: #aaa;
}

@media screen and (max-width:740px) {
    h1 {
      font-size: 10vw;
    }
    h2 {
      font-size: 5vw;
    }
}

